--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-search": "^0.15.0",
+    "@xterm/addon-web-links": "^0.11.0",
+    "@xterm/xterm": "^5.5.0",
+    "electron-store": "^8.1.0",
     "element-plus": "^2.3.8",
+    "hterm-umd": "^1.0.1",
     "node-ssh": "^13.1.0",
-    "vue": "^3.3.4",
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0",
-    "xterm-addon-web-links": "^0.9.0"
+    "vue": "^3.3.4"
   },
   "build": {
     "appId": "com.example.myssh",
