--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@xterm/addon-search": "^0.15.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
+    "archiver": "^7.0.1",
     "electron-store": "^8.1.0",
     "element-plus": "^2.3.8",
     "hterm-umd": "^1.0.1",
+    "is-stream": "^2.0.1",
     "node-ssh": "^13.1.0",
     "vue": "^3.3.4"
   },
@@ -48,7 +50,11 @@
     },
     "files": [
       "dist/**/*",
-      "electron/**/*"
+      "electron/**/*",
+      "node_modules/**/*"
+    ],
+    "asarUnpack": [
+      "node_modules/**/*"
     ]
   }
 }
