--- a/package.json
+++ b/package.json
@@ -55,27 +55,45 @@
       "node_modules/**/*"
     ],
     "asarUnpack": [
-      "node_modules/**/*"
+      "node_modules/**/build/**/*.node",
+      "node_modules/**/*.node",
+      "node_modules/ssh2/**/*",
+      "node_modules/cpu-features/**/*",
+      "node_modules/iconv-corefoundation/**/*"
     ],
     "mac": {
+      "icon": "build/icon.icns",
+      "category": "public.app-category.utilities",
+      "entitlements": "build/entitlements.mac.plist",
+      "entitlementsInherit": "build/entitlements.mac.inherit.plist",
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false,
       "target": [
-        "dmg",
-        "zip"
-      ],
-      "arch": [
-        "arm64",
-        "x64"
+        {
+          "target": "dmg",
+          "arch": ["arm64", "x64"]
+        },
+        {
+          "target": "zip",
+          "arch": ["arm64", "x64"]
+        }
       ]
     },
     "win": {
+      "icon": "build/icon.png",
       "target": [
-        "nsis",
-        "zip"
-      ],
-      "arch": [
-        "x64",
-        "ia32"
+        {
+          "target": "nsis",
+          "arch": ["x64", "ia32"]
+        },
+        {
+          "target": "zip",
+          "arch": ["x64", "ia32"]
+        }
       ]
+    },
+    "linux": {
+      "icon": "build/icon.png"
     },
     "nsis": {
       "oneClick": false,
